--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 apply plugin: 'kotlin-android-extensions'
 ext.arch_version = '1.0.0-alpha9-1'
+ext.anko_version = '0.10.4'
 
 android {
     compileSdkVersion 26
@@ -32,6 +33,7 @@ kapt {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
@@ -46,14 +48,27 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'javax.inject:javax.inject:1'
 
-   /* //room
+    // Anko Commons
+    compile "org.jetbrains.anko:anko-commons:$anko_version"
+
+    // Anko Layouts
+    compile "org.jetbrains.anko:anko-sdk25:$anko_version"
+    // sdk15, sdk19, sdk21, sdk23 are also available
+    compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+
+    // Coroutine listeners for Anko Layouts
+    compile "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
+    compile "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+
+    // Anko SQLite
+    compile "org.jetbrains.anko:anko-sqlite:$anko_version"
+    /* //room
     compile "android.arch.persistence.room:runtime:1.0.0-rc1"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-rc1"
     compile "android.arch.persistence.room:rxjava2:1.0.0-rc1"*/
     // reactive
     compile "io.reactivex.rxjava2:rxjava:2.0.6"
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
-
 
     // Architecture Components
     compile "android.arch.lifecycle:runtime:$arch_version"
