--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,37 +29,34 @@ kapt {
     generateStubs = true
 }
 
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    // testing tool
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    // recyclerview and card view
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
+    // dependency injection
     compile 'com.google.dagger:dagger:2.8'
     kapt "com.google.dagger:dagger-compiler:2.8"
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'javax.inject:javax.inject:1'
-
     // Anko Commons
     compile "org.jetbrains.anko:anko-commons:$anko_version"
-
     // Anko Layouts
     compile "org.jetbrains.anko:anko-sdk25:$anko_version"
     // sdk15, sdk19, sdk21, sdk23 are also available
     compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
-
     // Coroutine listeners for Anko Layouts
     compile "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
     compile "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
-
     // Anko SQLite
     compile "org.jetbrains.anko:anko-sqlite:$anko_version"
     /* //room
@@ -69,7 +66,6 @@ dependencies {
     // reactive
     compile "io.reactivex.rxjava2:rxjava:2.0.6"
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
-
     // Architecture Components
     compile "android.arch.lifecycle:runtime:$arch_version"
     compile "android.arch.lifecycle:extensions:$arch_version"
@@ -85,6 +81,7 @@ dependencies {
     implementation "android.arch.paging:runtime:1.0.0-alpha2"
     annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
+    // event bus
     compile 'com.squareup:otto:1.3.8'
 
 }
