--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.core.kbasekit"
-        minSdkVersion 15
+        minSdkVersion 16
         multiDexEnabled true
         targetSdkVersion 26
         versionCode 1
@@ -83,6 +83,8 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
     // event bus
     compile 'com.squareup:otto:1.3.8'
+    // text path vieew
+    compile 'com.yanzhikai:TextPathView:0.1.2'
 
 }
 
