--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.splash.SplashActivity"
-            android:theme="@style/AppThemeSplash">
+            android:name=".ui.home.HomeActivity"
+            android:theme="@style/AppTheme.NoToolbar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,6 +27,9 @@
         <activity
             android:name=".ui.anko.AnkoActivity"
             android:theme="@style/AppTheme.NoToolbar" />
+        <!--<activity-->
+        <!--android:name=".ui.home.HomeActivity"-->
+        <!--android:label="@string/title_activity_home" />-->
     </application>
 
 </manifest>
